--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
 			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 		  </ol>
 		  <div class="carousel-inner">
 			<div class="carousel-item active eventos-card" >
-			  <div class="infor-eve"  style="background: url(img/event/espuma.jpg) center center no-repeat; background-size: cover;">
+			  <div class="infor-eve"  style="background: url(img/event/f-espuma.jpg) center center no-repeat; background-size: cover;">
 					<h4>Fiesta de espuma</h4>
 				  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					<br>
@@ -115,7 +116,7 @@
 				</div>
 			</div>
 			<div class="carousel-item eventos-card" >
-			  <div class="infor-eve"  style="background: url(img/event/car.jpg) center center no-repeat; background-size: cover;">
+			  <div class="infor-eve"  style="background: url(img/event/carnitas.jpg) center center no-repeat; background-size: cover;">
 				<h4>Feria de las Carnitas</h4>
 				  	<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					<br>
@@ -124,8 +125,17 @@
 				</div>
 			</div>
 			<div class="carousel-item eventos-card">
-			  <div class="infor-eve"  style="background: url(img/event/da.jpg) center center no-repeat; background-size: cover;">
+			  <div class="infor-eve"  style="background: url(img/event/dd.jpg) center center no-repeat; background-size: cover;">
 				<h4>Concierto Daddy Yankee</h4>
+				  	<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, ap eaque.</p>
+					<br>
+				  <span>35 de Agosto</span>
+				
+				</div>
+			</div>
+			  <div class="carousel-item eventos-card">
+			  <div class="infor-eve"  style="background: url(img/event/salto.jpg) center center no-repeat; background-size: cover;">
+				<h4>Gran Salto</h4>
 				  	<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, ap eaque.</p>
 					<br>
 				  <span>35 de Agosto</span>
@@ -228,12 +238,12 @@
 	  	<div class="container">
 			
 			<div class="row">
-				<div class="col-lg-5">
+				<div class="col-lg-5 col-md-12">
 				<h2><img src="img/en-linea.png" class="img-fluid" alt="" width="64px">Reportes Doctor Mora</h2>
 				<p>En esta seccion puedes reportat lamparas fundidas, baches, caminos en mal estado, etc...</p>
 					<img src="img/girl-report.png" class="img-fluid image" alt="">
 				</div>
-				<div class="col-lg-7 information-r">
+				<div class="col-lg-7 col-md-12 information-r">
 				
 					<div class="row row-cols-1 row-cols-md-2">
 					  <div class="col mb-4">
@@ -303,7 +313,7 @@
 	  <section class="dudas">
 	  	<div class="container">
 			<div class="row">
-				<div class="col-lg-7">
+				<div class="col-lg-7 col-md-12">
 					<h5>¿ Tienes Dudas o Preguntas ?</h5>
 					<p>Puedes Mandarnos un correo electronico <img src="img/mail.png" class="img-fluid" alt="" width="27px"> a dyxerteam@gmail.com y nosotros te resolveremos todas tus preguntas.</p>
 					<h5>¿ Como me registro en la plataforma ?</h5>
@@ -312,7 +322,7 @@
 					<h5>¿ Hay algun costo ?</h5>
 					<p><span>NO</span>, la plataforma es <strong>totalmente gratuita.</strong></p>
 				</div>
-				<div class="col-lg-5 people">
+				<div class="col-lg-5 col-md-12 people">
 					<img src="img/people.png" class="img-fluid" alt="">
 				</div>
 			</div>
