--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 	<link rel="stylesheet" href="css/fonts.css">  
 	  <link rel="stylesheet" href="css/carro.css"> 
 
+	  <!-- PWA-->
+	<meta name="theme-color" content="#000000"> 
+	<link rel="manifest" href="manifest.json">
+
+	  
+	  
 	  
     <title>Charkas</title>
   </head>
@@ -323,7 +329,7 @@
 					<p><span>NO</span>, la plataforma es <strong>totalmente gratuita.</strong></p>
 				</div>
 				<div class="col-lg-5 col-md-12 people">
-					<img src="img/people.png" class="img-fluid" alt="">
+					<img src="img/people.jpg" class="img-fluid" alt="">
 				</div>
 			</div>
 		</div>
