--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<p>Charkas es una plataforma que te ayuda a encontrar negocios, contratar servicios, además de enterarte sobre todo lo que ocurre en <strong>Doctor Mora y sus Comunidades.</strong></p>
 				</div>
 				<div class="col-lg-6 col-md-6">
-					<img src="img/House.png" class="img-fluid" alt="" width="500px">
+					<img src="img/search.png" class="img-fluid" alt="" width="500px">
 				</div>
 			</div>
 		</div>  
